<resources>
    <string name="upload_icon">Upload Icon</string>
    <string name="upload_photo">Upload Your Photo</string>
    <string name="convert_to_cartoon">Convert to Cartoon</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="edit_image_by_ai">Edit Image by AI</string>
    <string name="describe_how_you_want_to_edit_the_image">Describe how you want to edit the image</string>
    <string name="original_image">Original Image</string>
    <string name="generate_image">Generate Image</string>
    <string name="generate_logo">Generate Logo</string>
    <string name="generate_toy_figure">Generate Toy Figure</string>
    <string name="enter_company_name">Enter company or brand name</string>
    <string name="describe_logo">Describe your logo (style, colors, industry, etc.)</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="accessories">Accessories</string>
    <string name="clothing_description">Clothing Description</string>
</resources>