<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="39dp"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="@string/download"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:textStyle="bold"
                android:background="@drawable/btn_secondary" />

            <com.example.common.gradiant4.GradientButton
                android:id="@+id/shareButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/share"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:textStyle="bold" />

            <com.example.common.gradiant4.GradientButton
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView> 